force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Gestion des factures basée sur la modélisation du module Salesforce Billing</description>
    <label>Facture</label>
    <nameField>
        <displayFormat>FAC/{YYYY}/{0000000}</displayFormat>
        <label>Numéro de la facture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>