force-app/main/default/objects/Invoice__c/fields/advancePayment__c.field-meta.xml
<CustomField>
    <fullName>advancePayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acompte</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountingPiece__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Receipt</value>
        </filterItems>
        <filterItems>
            <field>AccountingPiece__c.status__c</field>
            <operation>equals</operation>
            <value>Comptabilisé</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AccountingPiece__c</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>