force-app/main/default/objects/Invoice__c/fields/advancePaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>advancePaymentAmount__c</fullName>
    <label>Acompte (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>