force-app/main/default/objects/Invoice__c/fields/afterSalesService__c.field-meta.xml
<CustomField>
    <fullName>afterSalesService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier SAV</label>
    <referenceTo>AfterSalesService__c</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>