force-app/main/default/objects/Invoice__c/fields/amountToCancel__c.field-meta.xml
<CustomField>
    <fullName>amountToCancel__c</fullName>
    <description>Champ technique permettant de connaitre le montant valide d&apos;une facture (montant pouvant être annulée par un avoir)</description>
    <formula>amount__c - cancelledAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Montant à annuler</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>