force-app/main/default/objects/Invoice__c/fields/amountWithoutDiscount__c.field-meta.xml
<CustomField>
    <fullName>amountWithoutDiscount__c</fullName>
    <label>Montant (TTC) hors remise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>