force-app/main/default/objects/Invoice__c/fields/autoNumber__c.field-meta.xml
<CustomField>
    <fullName>autoNumber__c</fullName>
    <label>[#] Numéro automatique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>