force-app/main/default/objects/Invoice__c/fields/billingAccount__c.field-meta.xml
<CustomField>
    <fullName>billingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Compte facturé</description>
    <label>Compte de facturation</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PersonalAccount</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BusinessAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>CustomerInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>