force-app/main/default/objects/Invoice__c/fields/billingAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>billingAccountEmail__c</fullName>
    <formula>billingAccount__r.email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Email du compte</label>
    <type>Text</type>
</CustomField>