force-app/main/default/objects/Invoice__c/fields/billingAdditionalAddress__c.field-meta.xml
<CustomField>
    <fullName>billingAdditionalAddress__c</fullName>
    <label>Complément d&apos;adresse de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>