force-app/main/default/objects/Invoice__c/fields/billingContact__c.field-meta.xml
<CustomField>
    <fullName>billingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact de facturation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Factures (Contact de facturation)</relationshipLabel>
    <relationshipName>CustomerInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>