force-app/main/default/objects/Invoice__c/fields/billingCountry__c.field-meta.xml
<CustomField>
    <fullName>billingCountry__c</fullName>
    <defaultValue>&apos;FRANCE&apos;</defaultValue>
    <label>Pays de facturation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>