force-app/main/default/objects/Invoice__c/fields/billingName__c.field-meta.xml
<CustomField>
    <fullName>billingName__c</fullName>
    <label>Nom de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>