force-app/main/default/objects/Invoice__c/fields/billingStreet__c.field-meta.xml
<CustomField>
    <fullName>billingStreet__c</fullName>
    <label>Rue de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>