force-app/main/default/objects/Invoice__c/fields/cancelledAmount__c.field-meta.xml
<CustomField>
    <fullName>cancelledAmount__c</fullName>
    <description>Le statut devrait pouvoir passer en annulé en fonction de la date d&apos;annulation, mais aussi en fonction du montant annulé (somme des montants des avoirs).</description>
    <label>Montant annulé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>