force-app/main/default/objects/Invoice__c/fields/Created_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Created_Datetime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Datetime</label>
    <type>DateTime</type>
</CustomField>