force-app/main/default/objects/Invoice__c/fields/createdDate__c.field-meta.xml
<CustomField>
    <fullName>createdDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date création</label>
    <type>Date</type>
</CustomField>