force-app/main/default/objects/Invoice__c/fields/creditMemoAmount__c.field-meta.xml
<CustomField>
    <fullName>creditMemoAmount__c</fullName>
    <label>Avoir (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>