force-app/main/default/objects/Invoice__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Order.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commande client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>