force-app/main/default/objects/Invoice__c/fields/customerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>customerOrderNumber__c</fullName>
    <formula>customerOrder__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Numéro de commande</label>
    <type>Text</type>
</CustomField>