force-app/main/default/objects/Invoice__c/fields/deliveryDate__c.field-meta.xml
<CustomField>
    <fullName>deliveryDate__c</fullName>
    <label>Date de livraison</label>
    <type>Date</type>
</CustomField>