force-app/main/default/objects/Invoice__c/fields/dueDate__c.field-meta.xml
<CustomField>
    <fullName>dueDate__c</fullName>
    <description>Date limite de paiement.
Alimentée automatiquement avec Date de facture + XX jours, XX étant défini par la propriété globale &quot;invoice.core.dueDate.delay&quot;</description>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>