force-app/main/default/objects/Invoice__c/fields/headOfficeAdditionalAddress__c.field-meta.xml
<CustomField>
    <fullName>headOfficeAdditionalAddress__c</fullName>
    <label>Compl. d&apos;adresse du siège social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>