force-app/main/default/objects/Invoice__c/fields/headOfficeCity__c.field-meta.xml
<CustomField>
    <fullName>headOfficeCity__c</fullName>
    <defaultValue>&quot;BOULOGNE-BILLANCOURT&quot;</defaultValue>
    <label>Ville du siège social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>