force-app/main/default/objects/Invoice__c/fields/headOfficeCountry__c.field-meta.xml
<CustomField>
    <fullName>headOfficeCountry__c</fullName>
    <defaultValue>&apos;FRANCE&apos;</defaultValue>
    <label>Pays du siège social</label>
    <length>80</length>
    <type>Text</type>
</CustomField>