force-app/main/default/objects/Invoice__c/fields/headOfficeEmail__c.field-meta.xml
<CustomField>
    <fullName>headOfficeEmail__c</fullName>
    <label>Email du siège social</label>
    <type>Email</type>
</CustomField>