force-app/main/default/objects/Invoice__c/fields/headOfficeLegalForm__c.field-meta.xml
<CustomField>
    <fullName>headOfficeLegalForm__c</fullName>
    <defaultValue>&quot;SAS&quot;</defaultValue>
    <label>Forme juridique du siège social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegalForm</valueSetName>
    </valueSet>
</CustomField>