force-app/main/default/objects/Invoice__c/fields/headOfficePostalCode__c.field-meta.xml
<CustomField>
    <fullName>headOfficePostalCode__c</fullName>
    <defaultValue>&quot;92100&quot;</defaultValue>
    <label>Code postal du siège social</label>
    <length>20</length>
    <type>Text</type>
</CustomField>