force-app/main/default/objects/Invoice__c/fields/headOfficeShareCapital__c.field-meta.xml
<CustomField>
    <fullName>headOfficeShareCapital__c</fullName>
    <defaultValue>250000</defaultValue>
    <label>Capital social du siège social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>