force-app/main/default/objects/Invoice__c/fields/headOfficeSIRET__c.field-meta.xml
<CustomField>
    <fullName>headOfficeSIRET__c</fullName>
    <defaultValue>40137531604330</defaultValue>
    <label>N° SIRET du siège social</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>