force-app/main/default/objects/Invoice__c/fields/headOfficeStreet__c.field-meta.xml
<CustomField>
    <fullName>headOfficeStreet__c</fullName>
    <label>Rue du siège social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>