force-app/main/default/objects/Invoice__c/fields/HST_AmountValidity__c.field-meta.xml
<CustomField>
    <fullName>HST_AmountValidity__c</fullName>
    <formula>(amount__c - advancePaymentAmount__c - creditMemoAmount__c)
-
(toPerceiveAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Validité montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>