force-app/main/default/objects/Invoice__c/fields/HST_IsCancellable__c.field-meta.xml
<CustomField>
    <fullName>HST_IsCancellable__c</fullName>
    <formula>isLegacy__c = true &amp;&amp;
amount__c &gt; 0 &amp;&amp;
!ISBLANK(invoiceDate__c) &amp;&amp;
cancelledAmount__c &gt;= amount__c &amp;&amp;
!ISPICKVAL(status__c, &apos;Annulée&apos;)</formula>
    <label>[#] Est annulable</label>
    <type>Checkbox</type>
</CustomField>