force-app/main/default/objects/Invoice__c/fields/HST_VATAmount__c.field-meta.xml
<CustomField>
    <fullName>HST_VATAmount__c</fullName>
    <formula>pretaxAmount__c - VATAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] HT - TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>