force-app/main/default/objects/Invoice__c/fields/identification__c.field-meta.xml
<CustomField>
    <fullName>identification__c</fullName>
    <formula>TEXT(DAY(invoiceDate__c)) + &apos;/&apos;+ TEXT(MONTH(invoiceDate__c)) + &apos;/&apos;+ TEXT(YEAR(invoiceDate__c)) + &apos; (&apos;+ TEXT(status__c) + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identification</label>
    <type>Text</type>
</CustomField>