force-app/main/default/objects/Invoice__c/fields/invoiceDate__c.field-meta.xml
<CustomField>
    <fullName>invoiceDate__c</fullName>
    <label>Date de facture</label>
    <type>Date</type>
</CustomField>