force-app/main/default/objects/Invoice__c/fields/invoiceLineCount__c.field-meta.xml
<CustomField>
    <fullName>invoiceLineCount__c</fullName>
    <label>[#] Nombre de lignes</label>
    <summaryForeignKey>InvoiceLine__c.invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>