force-app/main/default/objects/Invoice__c/fields/invoiceReference__c.field-meta.xml
<CustomField>
    <fullName>invoiceReference__c</fullName>
    <description>Numéro comptable de la facture</description>
    <externalId>true</externalId>
    <label>Référence de la facture</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>