force-app/main/default/objects/Invoice__c/fields/isInvoiceLocked__c.field-meta.xml
<CustomField>
    <fullName>isInvoiceLocked__c</fullName>
    <description>Interdire toute suppression de facture dès qu&apos;un numéro fiscal a été apposé sur la facture et ceci pendant une période de 10 ans (à partir de la date de facture)</description>
    <formula>NOT(ISNULL(invoiceDate__c)) &amp;&amp; 
ADDMONTHS(invoiceDate__c, 120) &gt; TODAY()</formula>
    <label>[#] Facture verrouillée</label>
    <type>Checkbox</type>
</CustomField>