force-app/main/default/objects/Invoice__c/fields/listAmount__c.field-meta.xml
<CustomField>
    <fullName>listAmount__c</fullName>
    <label>Montant catalogue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>