force-app/main/default/objects/Invoice__c/fields/notPaid__c.field-meta.xml
<CustomField>
    <fullName>notPaid__c</fullName>
    <formula>!ISNULL(publishedDate__c) &amp;&amp; ISNULL(paymentDate__c) &amp;&amp; TODAY() &gt; dueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Facture non acquittée</label>
    <type>Checkbox</type>
</CustomField>