force-app/main/default/objects/Invoice__c/fields/parentInvoice__c.field-meta.xml
<CustomField>
    <fullName>parentInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture initiale</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>