force-app/main/default/objects/Invoice__c/fields/paymentDate__c.field-meta.xml
<CustomField>
    <fullName>paymentDate__c</fullName>
    <label>Date de paiement</label>
    <type>Date</type>
</CustomField>