force-app/main/default/objects/Invoice__c/fields/perceivedAmount__c.field-meta.xml
<CustomField>
    <fullName>perceivedAmount__c</fullName>
    <description>Dans le cas d&apos;un paiement d&apos;acompte ou d&apos;une attribution de paiement avec un reste du paiement</description>
    <label>Montant perçu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>