force-app/main/default/objects/Invoice__c/fields/percentOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>percentOrderAmount__c</fullName>
    <description>Pourcentage du montant de la facture d&apos;acompte par rapport à au montant de la commande</description>
    <label>[#] Pourcentage montant commande</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>