force-app/main/default/objects/Invoice__c/fields/pretaxAmount__c.field-meta.xml
<CustomField>
    <fullName>pretaxAmount__c</fullName>
    <label>Montant (HT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>