force-app/main/default/objects/Invoice__c/fields/publishedDate__c.field-meta.xml
<CustomField>
    <fullName>publishedDate__c</fullName>
    <label>Date de publication</label>
    <type>Date</type>
</CustomField>