force-app/main/default/objects/Invoice__c/fields/RCSCity__c.field-meta.xml
<CustomField>
    <fullName>RCSCity__c</fullName>
    <defaultValue>&quot;Nanterre&quot;</defaultValue>
    <label>Ville RCS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>