force-app/main/default/objects/Invoice__c/fields/sellerAdditionalAddress__c.field-meta.xml
<CustomField>
    <fullName>sellerAdditionalAddress__c</fullName>
    <label>Compl. d&apos;adresse du vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>