force-app/main/default/objects/Invoice__c/fields/sellerCity__c.field-meta.xml
<CustomField>
    <fullName>sellerCity__c</fullName>
    <label>Ville du vendeur</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>