force-app/main/default/objects/Invoice__c/fields/sellerName__c.field-meta.xml
<CustomField>
    <fullName>sellerName__c</fullName>
    <label>Nom du vendeur</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>