force-app/main/default/objects/Invoice__c/fields/sellerPostalCode__c.field-meta.xml
<CustomField>
    <fullName>sellerPostalCode__c</fullName>
    <label>Code postal du vendeur</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>