force-app/main/default/objects/Invoice__c/fields/sellerSIRET__c.field-meta.xml
<CustomField>
    <fullName>sellerSIRET__c</fullName>
    <label>N° SIRET du vendeur</label>
    <precision>14</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>