force-app/main/default/objects/Invoice__c/fields/sellerState__c.field-meta.xml
<CustomField>
    <fullName>sellerState__c</fullName>
    <label>Région/département du vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>