force-app/main/default/objects/Invoice__c/fields/sellerStreet__c.field-meta.xml
<CustomField>
    <fullName>sellerStreet__c</fullName>
    <label>Rue du vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>