force-app/main/default/objects/Invoice__c/fields/shippingCountry__c.field-meta.xml
<CustomField>
    <fullName>shippingCountry__c</fullName>
    <label>Pays de livraison</label>
    <length>80</length>
    <type>Text</type>
</CustomField>