force-app/main/default/objects/Invoice__c/fields/shippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>shippingPostalCode__c</fullName>
    <label>Code postal de livraison</label>
    <length>20</length>
    <type>Text</type>
</CustomField>