force-app/main/default/objects/Invoice__c/fields/shippingState__c.field-meta.xml
<CustomField>
    <fullName>shippingState__c</fullName>
    <label>Région/département de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>