force-app/main/default/objects/Invoice__c/fields/stageName__c.field-meta.xml
<CustomField>
    <fullName>stageName__c</fullName>
    <defaultValue>&apos;Préparation&apos;</defaultValue>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvoiceStageName</valueSetName>
    </valueSet>
</CustomField>