force-app/main/default/objects/Invoice__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&apos;Brouillon&apos;</defaultValue>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
            </value>
            <value>
                <fullName>Validée</fullName>
            </value>
            <value>
                <fullName>Acquittée</fullName>
            </value>
            <value>
                <fullName>Retard de paiement</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Publiée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>