force-app/main/default/objects/Invoice__c/fields/testIdenticalAmount__c.field-meta.xml
<CustomField>
    <fullName>testIdenticalAmount__c</fullName>
    <formula>amount__c = customerOrder__r.amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST Montants TTC identiques</label>
    <type>Checkbox</type>
</CustomField>