force-app/main/default/objects/Invoice__c/fields/testIdenticalNumberOfLine__c.field-meta.xml
<CustomField>
    <fullName>testIdenticalNumberOfLine__c</fullName>
    <formula>invoiceLineCount__c = customerOrder__r.orderItemCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST Nb ligne identique</label>
    <type>Checkbox</type>
</CustomField>