force-app/main/default/objects/Invoice__c/fields/testIdenticalPretaxAmount__c.field-meta.xml
<CustomField>
    <fullName>testIdenticalPretaxAmount__c</fullName>
    <formula>pretaxAmount__c = customerOrder__r.pretaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST Montants HT identiques</label>
    <type>Checkbox</type>
</CustomField>