force-app/main/default/objects/Invoice__c/fields/TMP_isCancellationInvalid__c.field-meta.xml
<CustomField>
    <fullName>TMP_isCancellationInvalid__c</fullName>
    <formula>AND(amount__c &gt; 0,
(ISNULL(cancellationDate__c) &amp;&amp; (cancelledAmount__c &gt;= amount__c))
||
(!ISNULL(cancellationDate__c) &amp;&amp; (cancelledAmount__c &lt; amount__c))
||
((!ISNULL(cancellationDate__c) || (cancelledAmount__c &gt;= amount__c)) &amp;&amp; !ISPICKVAL(status__c, &apos;Annulée&apos;))
)</formula>
    <label>[#] Annulation invalide?</label>
    <type>Checkbox</type>
</CustomField>