force-app/main/default/objects/Invoice__c/fields/toPerceiveAmount__c.field-meta.xml
<CustomField>
    <fullName>toPerceiveAmount__c</fullName>
    <description>Le montant que le client doit payer, déduction des avoirs et des paiements effectués</description>
    <label>Montant à percevoir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>