force-app/main/default/objects/Invoice__c/fields/VATAmount1__c.field-meta.xml
<CustomField>
    <fullName>VATAmount1__c</fullName>
    <label>Montant TVA (1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>