force-app/main/default/objects/Invoice__c/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <formula>VATAmount1__c + VATAmount2__c + VATAmount3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>