force-app/main/default/objects/Invoice__c/fields/VATRate2__c.field-meta.xml
<CustomField>
    <fullName>VATRate2__c</fullName>
    <label>Taux TVA (2)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>