force-app/main/default/objects/Invoice__c/fields/VATRate3__c.field-meta.xml
<CustomField>
    <fullName>VATRate3__c</fullName>
    <label>Taux TVA (3)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>