force-app/main/default/objects/Invoice__c/fields/workOrder__c.field-meta.xml
<CustomField>
    <fullName>workOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande de rendez-vous</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>WorkOrder.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>workOrderService</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>