force-app/main/default/objects/Invoice__c/recordTypes/AdvanceInvoice.recordType-meta.xml
<RecordType>
    <fullName>AdvanceInvoice</fullName>
    <active>true</active>
    <label>Facture d&apos;acompte</label>
</RecordType>