force-app/main/default/objects/Invoice__c/validationRules/VR_K3_AdvanceInvoice_AdvancePaymRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AdvanceInvoice_AdvancePaymRequired</fullName>
    <active>true</active>
    <description>Le champ &quot;Acompte&quot; est obligatoire pour les factures d&apos;acompte</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName == &apos;AdvanceInvoice&apos; &amp;&amp;
ISNULL( advancePayment__c ) &amp;&amp;  
isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>advancePayment__c</errorDisplayField>
    <errorMessage>Acompte obligatoire!</errorMessage>
</ValidationRule>