force-app/main/default/objects/Invoice__c/validationRules/VR_K3_Invoice_AdvancePaymentAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Invoice_AdvancePaymentAmount</fullName>
    <active>true</active>
    <description>L&apos;acompte doit être supérieur à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
NOT(ISNULL( advancePaymentAmount__c )) &amp;&amp;
advancePaymentAmount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>advancePaymentAmount__c</errorDisplayField>
    <errorMessage>L&apos;acompte doit être supérieur à 0!</errorMessage>
</ValidationRule>