force-app/main/default/objects/Invoice__c/validationRules/VR_K3_Invoice_Amendment.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Invoice_Amendment</fullName>
    <active>true</active>
    <description>Impossible de créer cet enregistrement sur une commande avenant!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
NOT(ISBLANK( customerOrder__c )) &amp;&amp;
ISPICKVAL(customerOrder__r.Type, &quot;Avenant&quot;)</errorConditionFormula>
    <errorDisplayField>customerOrder__c</errorDisplayField>
    <errorMessage>Impossible de créer une facture sur une commande avenant!</errorMessage>
</ValidationRule>