force-app/main/default/objects/Invoice__c/validationRules/VR_K3_Invoice_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Invoice_Cancellation</fullName>
    <active>true</active>
    <description>Lors de la comptabilisation d&apos;une facture (date de facture ou référence renseignée), vérifier que le montant de la nouvelle facture ajouté au débit de la commande ne dépasse pas le montant total TTC de la commande.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISNULL(cancellationDate__c) &amp;&amp;
ISPICKVAL(status__c, &apos;Annulée&apos;)</errorConditionFormula>
    <errorMessage>Date d&apos;annulation à renseigner!</errorMessage>
</ValidationRule>